--- a/sass/sections/_project-details.scss
+++ b/sass/sections/_project-details.scss
@@ -16,6 +16,7 @@
 }
 
 .project-details {
+	--mb: 0;
 	.close-ctrl {
 		position: absolute;
 		right: $spacing-01;
